// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`package manager files written properly 1`] = `
Array [
  "/node_modules/@emotion/is-prop-valid/dist/is-prop-valid.cjs.js",
  "/node_modules/@emotion/is-prop-valid/package.json",
  "/node_modules/@emotion/memoize/dist/memoize.cjs.js",
  "/node_modules/@emotion/memoize/package.json",
  "/node_modules/asap/asap.js",
  "/node_modules/asap/package.json",
  "/node_modules/base64-js/index.js",
  "/node_modules/base64-js/package.json",
  "/node_modules/bignumber.js/bignumber.d.ts",
  "/node_modules/bignumber.js/index.js",
  "/node_modules/bignumber.js/package.json",
  "/node_modules/buffer/index.d.ts",
  "/node_modules/buffer/index.js",
  "/node_modules/buffer/package.json",
  "/node_modules/constate/dist/constate.cjs.js",
  "/node_modules/constate/dist/ts/src",
  "/node_modules/constate/package.json",
  "/node_modules/core-js/index.js",
  "/node_modules/core-js/package.json",
  "/node_modules/css-color-keywords/index.js",
  "/node_modules/css-color-keywords/package.json",
  "/node_modules/css-to-react-native/index.js",
  "/node_modules/css-to-react-native/package.json",
  "/node_modules/encoding/lib/encoding.js",
  "/node_modules/encoding/package.json",
  "/node_modules/fbjs/index.js",
  "/node_modules/fbjs/package.json",
  "/node_modules/has-flag/index.js",
  "/node_modules/has-flag/package.json",
  "/node_modules/hoist-non-react-statics/dist/hoist-non-react-statics.cjs.js",
  "/node_modules/hoist-non-react-statics/index.d.ts",
  "/node_modules/hoist-non-react-statics/package.json",
  "/node_modules/iconv-lite/lib/index.d.ts",
  "/node_modules/iconv-lite/lib/index.js",
  "/node_modules/iconv-lite/package.json",
  "/node_modules/ieee754/index.js",
  "/node_modules/ieee754/package.json",
  "/node_modules/is-stream/index.js",
  "/node_modules/is-stream/package.json",
  "/node_modules/isomorphic-fetch/fetch-npm-node.js",
  "/node_modules/isomorphic-fetch/package.json",
  "/node_modules/js-tokens/index.js",
  "/node_modules/js-tokens/package.json",
  "/node_modules/loose-envify/index.js",
  "/node_modules/loose-envify/package.json",
  "/node_modules/node-fetch/index.js",
  "/node_modules/node-fetch/package.json",
  "/node_modules/object-assign/index.js",
  "/node_modules/object-assign/package.json",
  "/node_modules/popper.js/dist/umd/popper.js",
  "/node_modules/popper.js/index.d.ts",
  "/node_modules/popper.js/package.json",
  "/node_modules/postcss-value-parser/lib/index.js",
  "/node_modules/postcss-value-parser/package.json",
  "/node_modules/promise/index.js",
  "/node_modules/promise/package.json",
  "/node_modules/prop-types/index.js",
  "/node_modules/prop-types/package.json",
  "/node_modules/react-dom/index.js",
  "/node_modules/react-dom/package.json",
  "/node_modules/react-is/index.js",
  "/node_modules/react-is/package.json",
  "/node_modules/react/index.js",
  "/node_modules/react/package.json",
  "/node_modules/reakit/lib/index.js",
  "/node_modules/reakit/package.json",
  "/node_modules/reakit/ts",
  "/node_modules/rxjs/index.d.ts",
  "/node_modules/rxjs/index.js",
  "/node_modules/rxjs/package.json",
  "/node_modules/safer-buffer/package.json",
  "/node_modules/safer-buffer/safer.js",
  "/node_modules/schedule/index.js",
  "/node_modules/schedule/package.json",
  "/node_modules/setimmediate/package.json",
  "/node_modules/setimmediate/setImmediate.js",
  "/node_modules/styled-components/dist/styled-components.cjs.js",
  "/node_modules/styled-components/package.json",
  "/node_modules/styled-components/typings/styled-components.d.ts",
  "/node_modules/styled-tools/dist/cjs/index.js",
  "/node_modules/styled-tools/package.json",
  "/node_modules/styled-tools/types/index.d.ts",
  "/node_modules/stylis-rule-sheet/index.js",
  "/node_modules/stylis-rule-sheet/package.json",
  "/node_modules/stylis/package.json",
  "/node_modules/stylis/stylis.d.ts",
  "/node_modules/stylis/stylis.js",
  "/node_modules/supports-color/index.js",
  "/node_modules/supports-color/package.json",
  "/node_modules/tslib/package.json",
  "/node_modules/tslib/tslib.d.ts",
  "/node_modules/tslib/tslib.js",
  "/node_modules/ua-parser-js/package.json",
  "/node_modules/ua-parser-js/src/ua-parser.js",
  "/node_modules/whatwg-fetch/dist/fetch.umd.js",
  "/node_modules/whatwg-fetch/package.json",
]
`;

exports[`package manager node_modules updated 1`] = `
Array [
  "/node_modules/@emotion/is-prop-valid/dist/is-prop-valid.cjs.js",
  "/node_modules/@emotion/is-prop-valid/package.json",
  "/node_modules/@emotion/memoize/dist/memoize.cjs.js",
  "/node_modules/@emotion/memoize/package.json",
  "/node_modules/asap/asap.js",
  "/node_modules/asap/package.json",
  "/node_modules/base64-js/index.js",
  "/node_modules/base64-js/package.json",
  "/node_modules/bignumber.js/bignumber.d.ts",
  "/node_modules/bignumber.js/bignumber.d.ts",
  "/node_modules/bignumber.js/index.js",
  "/node_modules/bignumber.js/index.js",
  "/node_modules/bignumber.js/package.json",
  "/node_modules/bignumber.js/package.json",
  "/node_modules/buffer/index.d.ts",
  "/node_modules/buffer/index.js",
  "/node_modules/buffer/package.json",
  "/node_modules/constate/dist/constate.cjs.js",
  "/node_modules/constate/dist/ts/src",
  "/node_modules/constate/package.json",
  "/node_modules/core-js/index.js",
  "/node_modules/core-js/package.json",
  "/node_modules/css-color-keywords/index.js",
  "/node_modules/css-color-keywords/package.json",
  "/node_modules/css-to-react-native/index.js",
  "/node_modules/css-to-react-native/package.json",
  "/node_modules/encoding/lib/encoding.js",
  "/node_modules/encoding/package.json",
  "/node_modules/fbjs/index.js",
  "/node_modules/fbjs/package.json",
  "/node_modules/has-flag/index.js",
  "/node_modules/has-flag/package.json",
  "/node_modules/hoist-non-react-statics/dist/hoist-non-react-statics.cjs.js",
  "/node_modules/hoist-non-react-statics/index.d.ts",
  "/node_modules/hoist-non-react-statics/package.json",
  "/node_modules/iconv-lite/lib/index.d.ts",
  "/node_modules/iconv-lite/lib/index.js",
  "/node_modules/iconv-lite/package.json",
  "/node_modules/ieee754/index.js",
  "/node_modules/ieee754/package.json",
  "/node_modules/is-stream/index.js",
  "/node_modules/is-stream/package.json",
  "/node_modules/isomorphic-fetch/fetch-npm-node.js",
  "/node_modules/isomorphic-fetch/package.json",
  "/node_modules/js-tokens/index.js",
  "/node_modules/js-tokens/package.json",
  "/node_modules/loose-envify/index.js",
  "/node_modules/loose-envify/package.json",
  "/node_modules/lru-cache/index.js",
  "/node_modules/lru-cache/package.json",
  "/node_modules/node-fetch/index.js",
  "/node_modules/node-fetch/package.json",
  "/node_modules/object-assign/index.js",
  "/node_modules/object-assign/package.json",
  "/node_modules/onigasm/lib/index.js",
  "/node_modules/onigasm/lib/typings/index.d.ts",
  "/node_modules/onigasm/package.json",
  "/node_modules/popper.js/dist/umd/popper.js",
  "/node_modules/popper.js/index.d.ts",
  "/node_modules/popper.js/package.json",
  "/node_modules/postcss-value-parser/lib/index.js",
  "/node_modules/postcss-value-parser/package.json",
  "/node_modules/promise/index.js",
  "/node_modules/promise/package.json",
  "/node_modules/prop-types/index.js",
  "/node_modules/prop-types/package.json",
  "/node_modules/pseudomap/map.js",
  "/node_modules/pseudomap/package.json",
  "/node_modules/react-dom/index.js",
  "/node_modules/react-dom/package.json",
  "/node_modules/react-is/index.js",
  "/node_modules/react-is/package.json",
  "/node_modules/react/index.js",
  "/node_modules/react/package.json",
  "/node_modules/reakit/lib/index.js",
  "/node_modules/reakit/package.json",
  "/node_modules/reakit/ts",
  "/node_modules/rxjs/index.d.ts",
  "/node_modules/rxjs/index.js",
  "/node_modules/rxjs/package.json",
  "/node_modules/safer-buffer/package.json",
  "/node_modules/safer-buffer/safer.js",
  "/node_modules/schedule/index.js",
  "/node_modules/schedule/package.json",
  "/node_modules/setimmediate/package.json",
  "/node_modules/setimmediate/setImmediate.js",
  "/node_modules/styled-components/dist/styled-components.cjs.js",
  "/node_modules/styled-components/package.json",
  "/node_modules/styled-components/typings/styled-components.d.ts",
  "/node_modules/styled-tools/dist/cjs/index.js",
  "/node_modules/styled-tools/package.json",
  "/node_modules/styled-tools/types/index.d.ts",
  "/node_modules/stylis-rule-sheet/index.js",
  "/node_modules/stylis-rule-sheet/package.json",
  "/node_modules/stylis/package.json",
  "/node_modules/stylis/stylis.d.ts",
  "/node_modules/stylis/stylis.js",
  "/node_modules/supports-color/index.js",
  "/node_modules/supports-color/package.json",
  "/node_modules/tslib/package.json",
  "/node_modules/tslib/tslib.d.ts",
  "/node_modules/tslib/tslib.js",
  "/node_modules/ua-parser-js/package.json",
  "/node_modules/ua-parser-js/src/ua-parser.js",
  "/node_modules/whatwg-fetch/dist/fetch.umd.js",
  "/node_modules/whatwg-fetch/package.json",
  "/node_modules/yallist/package.json",
  "/node_modules/yallist/yallist.js",
]
`;
